malco-proto-donation-app - app - scroll alignment fixes. Noted scroll into view issues for mobile.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,14 @@
+@import "~bootstrap/scss/bootstrap";
+
 .sticky {
   position: sticky;
   top: 0;
 }
 
 .anchor-section {
-  scroll-margin-top: 50px;
+  scroll-margin-top: 100px;
+
+  @include media-breakpoint-up(md) {
+    scroll-margin-top: 50px;
+  }
 }
